<resources>
    <string name="app_name">Shopping List App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="fab">fab</string>
    <string name="add_product">Add Product</string>
    <string name="milk">Milk</string>
    <string name="product_name">Product name</string>
    <string name="add_price">Add price</string>
    <string name="finish">Finish</string>
    <string name="_10">10</string>
    <string name="_3">3</string>
    <string name="no">no</string>
    <string name="add_amount">Add amount</string>
    <string name="update_product">Update Product</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="is_bought">Is Bought?</string>
    <string name="product_list">Product List</string>
    <string name="price">price</string>
    <string name="amount">amount</string>
</resources>