<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/update_product"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceHeadline4"
        android:gravity="center_horizontal" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/product_name"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/product_detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="number"
        android:hint="@string/add_price"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/product_detail_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="number"
        android:hint="@string/add_amount"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/product_detail_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/is_bought" />

    <Button
        android:id="@+id/update_button"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/update" />

    <Button
        android:id="@+id/remove_button"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/delete" />
</LinearLayout>