<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="8dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/milk"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:text="@string/price"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:textSize="12sp"
        android:layout_toRightOf="@+id/product_name"
        android:layout_toEndOf="@+id/product_name" />

    <TextView
        android:id="@+id/product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:text="@string/_10"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:textSize="12sp"
        android:layout_below="@+id/price"
        android:layout_toRightOf="@+id/product_name"
        android:layout_toEndOf="@+id/product_name" />

    <TextView
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:text="@string/amount"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:textSize="12sp"
        android:layout_toRightOf="@+id/price"
        android:layout_toEndOf="@+id/price" />

    <TextView
        android:id="@+id/product_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:textSize="12sp"
        android:text="@string/_3"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:layout_below="@+id/amount"
        android:layout_toRightOf="@+id/price"
        android:layout_toEndOf="@+id/price" />

    <ImageView
        android:id="@+id/product_isBought"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/checkbox_off_background"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_editor_absoluteY="23dp"
        android:layout_margin="12dp"
        android:layout_toRightOf="@+id/amount"
        android:layout_toEndOf="@+id/amount" />


</RelativeLayout>